--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ MONGO_URI=mongodb+srv://Vercel-Admin-TrinextGenDb:N3SBwXIko0ILXmp8@trinextgendb.
 FRONTEND_URL=https://tri-next-gen.vercel.app
 
 # API Base URL for frontend
-VITE_API_BASE=https://tri-next-gen.vercel.app
+VITE_API_BASE=https://tri-next-gen-backend.vercel.app
 
 # Admin Credentials
 ADMIN_EMAIL=trinextgen@gmail.com
