--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ VITE_API_BASE=https://tri-next-gen-backend.vercel.app
 
 # Admin Credentials
 ADMIN_EMAIL=trinextgen@gmail.com
-ADMIN_PASSWORD=password123
+ADMIN_PASSWORD=triadminmk@2025
