--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "zod": "^4.1.11"
+    "multer": "^1.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
